added UI test using espresso for MenuActivity and menuFragment click

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,20 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.google.android.exoplayer:exoplayer:r2.3.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
+
+    androidTestCompile('com.android.support.test:runner:0.3') {
+        // Necessary if your app targets Marshmallow (since the test runner
+        // hasn't moved to Marshmallow yet)
+        exclude group: 'com.android.support', module: 'support-annotations'
+
+    }
+    //referenced from the link:
+    // https://guides.codepath.com/android/UI-Testing-with-Espresso#interacting-with-a-recyclerview
+    androidTestCompile('com.android.support.test.espresso:espresso-contrib:2.2') {
+        // Necessary to avoid version conflicts
+        exclude group: 'com.android.support', module: 'appcompat'
+        exclude group: 'com.android.support', module: 'support-v4'
+        exclude group: 'com.android.support', module: 'support-annotations'
+        exclude module: 'recyclerview-v7'
+    }
 }
